<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/dark_mode_key"
        android:title="Dark Mode"
        app:icon="@drawable/ic_baseline_dark_mode_24" />

    <ListPreference
        android:entries="@array/country_values"
        android:title="Country"
        app:defaultValue="in"
        android:defaultValue="India"
        app:entryValues="@array/country_key"
        app:icon="@drawable/ic_country_24"
        app:key="@string/preference_country_key" />
    <Preference
        app:icon="@drawable/ic_baseline_share_24"
        app:key="@string/share_key"
        app:title="@string/share_title" />

    <Preference
        app:icon="@drawable/ic_baseline_logout_24"
        app:key="@string/logout_key"
        app:title="@string/logout_title" />


</PreferenceScreen>