<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_top_headline">

    <fragment
        android:id="@+id/navigation_top_headline"
        android:name="com.uds.akhbar.ui.topheadline.TopHeadlineFragment"
        android:label="@string/title_top_headline"
        tools:layout="@layout/fragment_top_headlines" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.uds.akhbar.ui.searcharticle.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_saved_article"
        android:name="com.uds.akhbar.ui.savedarticle.SavedArticleFragment"
        android:label="@string/title_saved_articles"
        tools:layout="@layout/fragment_saved_articles" />
</navigation>